--- a/src/app/pages/card/card.component.css
+++ b/src/app/pages/card/card.component.css
@@ -43,3 +43,17 @@ img {
   transform: scale(1.2);
   cursor: pointer;
 }
+.category {
+  display: inline-block;
+  max-width: 5rem;
+  text-align: center;
+  margin-bottom: 1rem;
+  color: white;
+  padding: 0.2rem;
+  font-size: 14px;
+  background-color: seagreen;
+  border: 1px solid green;
+}
+.category:hover {
+  transform: scale(1.2);
+}
