added form for create/edit functionalities

--- a/src/app/pages/card/card.component.html
+++ b/src/app/pages/card/card.component.html
@@ -1,8 +1,7 @@
 <div class="card-wrapper flex-col">
     <div class="category">
         <strong><span (click)="onClick(food.category)">{{food.category}}</span></strong>
-    </div>
-    <img class="image" src={{food.image}} alt="">
+    </div> <img class="image" src={{food.image}} alt="">
     <div class="card-info">
         <div class="metaData flex center ">
             <h3>{{food.name}}</h3>
