--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="nav">
-    <h1 class="nav-title">RecipeRack</h1>
+    <h1 class="nav-title" [routerLink]="'/'">RecipeRack</h1>
     <div class="search-container">
         <input type="text" placeholder="Search">
     </div>
