--- a/src/app/pages/card/card.component.html
+++ b/src/app/pages/card/card.component.html
@@ -44,6 +44,11 @@
             <button class="detail btn">
                 View Recipe
             </button>
+            <div>
+                @for(rating of [1,2,3,4,5];track rating){
+                <fa-icon [icon]="star" [class.colored]="food.ratings>rating"></fa-icon>
+                }
+            </div>
 
         </div>
     </div>
