fixed ratings error

--- a/src/app/form/recipe-form/recipe-form.component.html
+++ b/src/app/form/recipe-form/recipe-form.component.html
@@ -15,6 +15,17 @@
                 <input type="text" id="category" formControlName="category">
             </div>
             <div class="fields flex-col">
+                <label for="ratings">Ratings:</label>
+                <!-- <input type="text" id="category" formControlName="category"> -->
+                <select name="ratings" id="ratings" formControlName="ratings">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                </select>
+            </div>
+            <div class="fields flex-col">
                 <label for="description">Description:</label>
                 <input type="text" id="description" formControlName="description">
             </div>
