added routing for detail view

--- a/src/app/pages/card/card.component.html
+++ b/src/app/pages/card/card.component.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="action-btn flex center">
-            <button class="detail btn">
+            <button class="detail btn" [routerLink]="['/detail','food.id']">
                 View Recipe
             </button>
             <div>
