added images and modified image path

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,6 +9,6 @@
         <button clickable [routerLink]="['/cards']" class="start-btn">Get Started</button>
     </div>
     <div class="col-right">
-        <img class="image" src="../../../assets/images/hero1.png" alt="" class="logo">
+        <img class="image" src="../../../assets/images/hero.png" alt="" class="logo">
     </div>
 </div>
