--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,3 +5,11 @@
   padding: 1.7rem;
   max-width: 100vw;
 }
+fa-icon {
+  font-size: larger;
+  font-weight: 500;
+  margin-left: 1rem;
+}
+fa-icon:hover {
+  cursor: pointer;
+}
