added a button for recipe creation page

--- a/src/app/pages/navbar/navbar.component.css
+++ b/src/app/pages/navbar/navbar.component.css
@@ -18,3 +18,11 @@ input:hover {
   width: 250px;
   border: 1px solid black;
 }
+fa-icon {
+  font-size: larger;
+  font-weight: 900;
+  margin: 3.4rem;
+}
+fa-icon:hover {
+  cursor: pointer;
+}
