--- a/src/app/pages/card/card.component.html
+++ b/src/app/pages/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="card-wrapper flex-col">
     <div class="category">
-        <strong><span (click)="onClick(food.category)">{{food.category}}</span></strong>
+        <strong><span>{{food.category}}</span></strong>
     </div> <img class="image" src={{food.image}} alt="">
     <div class="card-info">
         <div class="metaData flex center ">
