--- a/src/app/pages/display/display.component.css
+++ b/src/app/pages/display/display.component.css
@@ -1,5 +1,5 @@
 .wrapper {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 3rem;
 }
